[package]
name = "async_limiter"
version = "0.1.2"
description = "Simple ratelimiter for async tasks."
authors = ["Kave Bahraman <Sadegh.b218@gmail.com>"]
edition = "2024"
documentation = "https://docs.rs/async_limiter"
repository = "https://github.com/BerserkerMother/async_limiter"
license = "MIT"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
