[package]
name = "async_limiter"
version = "0.1.3"
description = "Simple ratelimiter for async tasks."
authors = ["Kave Bahraman <Sadegh.b218@gmail.com>"]
edition = "2024"
documentation = "https://docs.rs/async_limiter"
repository = "https://github.com/BerserkerMother/async_limiter"
readme = "README.md"
license = "MIT"
